# pathtracer

./: .gitignore  Cargo.toml  README.md
src/: bvh.rs  camera.rs  hit.rs  hit_list.rs  main.rs  material.rs  onb.rs  perlin.rs  ray.rs  rectangle.rs  sphere.rs  texture.rs  util.rs  vec3.rs  volume.rs  worker.rs  world.rs
src/acceleration/: aabb.rs  bvh.rs  mod.rs
src/geometry/: cube.rs  hit.rs  mod.rs  rectangle.rs  sphere.rs
src/scenes/: cornell_box.rs  mod.rs
