[package]
name = "pathtracer"
version = "0.1.0"
authors = ["WereDiggle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
progress = "0.2.0"
rand = "0.7.3"
crossbeam-channel = "0.4.2"
chrono = "0.4.11"